--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -139,9 +139,7 @@
                 <div class="hobby__description">
                     <p class="hobby__text">Моё хобби&nbsp;&mdash; сноуборд, велопрогулки и&nbsp;сапсёрфинг. Это
                         прекрасный способ
-                        провести время, насладиться природой, получить положительные эмоции. Но&nbsp;самое
-                        главное&nbsp;&mdash; это кодинг
-                        и&nbsp;прокачка навыков.</p>
+                        провести время, насладиться природой, получить положительные эмоции.</p>
                 </div>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide"><img class="hobby__img" src="image/swiper/slide-1.jpeg" alt="photo">
@@ -287,7 +285,7 @@
                     <div class="swiper-project__slide swiper-slide">
                         <div class="swiper-project__image">
                             <a href="https://romanvadimovich.github.io/MaketGB/" target="_blank"><img
-                                    src="image/project/THE BRAND.png" alt="картинка"></a>
+                                    src="image/project/THEBRAND.png" alt="картинка"></a>
                         </div>
                     </div>
                     <div class="swiper-project__slide swiper-slide">
@@ -298,7 +296,8 @@
                     </div>
                     <div class="swiper-project__slide swiper-slide">
                         <div class="swiper-project__image">
-                            <img src="image/project/THE BRAND.png" alt="картинка">
+                            <a href="https://romanvadimovich.github.io/YandexTest/" target="_blank"><img
+                                    src="image/project/testlending.png" alt="картинка"></a>
                         </div>
                     </div>
 
