--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     <div class="swiper-project__slide swiper-slide">
                         <div class="swiper-project__image">
                             <a href="https://romanvadimovich.github.io/TestTeamLead/" target="_blank"><img
-                                    src="image/project/levelUp.png" alt="картинка"></a>
+                                    src="image/project/levelup.png" alt="картинка"></a>
                         </div>
                     </div>
                     <div class="swiper-project__slide swiper-slide">
