--- a/index.html
+++ b/index.html
@@ -300,15 +300,27 @@
                                     src="image/project/testlending.png" alt="картинка"></a>
                         </div>
                     </div>
-
+                    <div class="swiper-project__slide swiper-slide"></div>
+                    <div class="swiper-project__image">
+                        <a href="https://romanvadimovich.github.io/MST/" target="_blank"><img
+                                src="image/project/MST.png" alt="картинка"></a>
+                    </div>
                 </div>
-                <!-- If we need pagination -->
-                <div class="swiper-pagination2"></div>
-
-                <!-- If we need navigation buttons -->
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
+                <div class="swiper-project__slide swiper-slide"></div>
+                <div class="swiper-project__image">
+                    <a href="https://romanvadimovich.github.io/testMaket/" target="_blank"><img
+                            src="image/project/TarotSchool.png" alt="картинка"></a>
+                </div>
             </div>
+
+        </div>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination2"></div>
+
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+        </div>
 
 
 
