--- a/index.html
+++ b/index.html
@@ -300,16 +300,18 @@
                                     src="image/project/testlending.png" alt="картинка"></a>
                         </div>
                     </div>
-                    <div class="swiper-project__slide swiper-slide"></div>
-                    <div class="swiper-project__image">
-                        <a href="https://romanvadimovich.github.io/MST/" target="_blank"><img
-                                src="image/project/MST.png" alt="картинка"></a>
+                    <div class="swiper-project__slide swiper-slide">
+                        <div class="swiper-project__image">
+                            <a href="https://romanvadimovich.github.io/MST/" target="_blank"><img
+                                    src="image/project/MST.png" alt="картинка"></a>
+                        </div>
                     </div>
                 </div>
-                <div class="swiper-project__slide swiper-slide"></div>
-                <div class="swiper-project__image">
-                    <a href="https://romanvadimovich.github.io/testMaket/" target="_blank"><img
-                            src="image/project/TarotSchool.png" alt="картинка"></a>
+                <div class="swiper-project__slide swiper-slide">
+                    <div class="swiper-project__image">
+                        <a href="https://romanvadimovich.github.io/testMaket/" target="_blank"><img
+                                src="image/project/TarotSchool.png" alt="картинка"></a>
+                    </div>
                 </div>
             </div>
 
